# FastLedIdf

./: .gitignore  CMakeLists.txt  README.md  esp32-hal-gpio.c  esp32-hal.c
components/FastLED-idf/include/: clockless_esp32.h  colorutils.h
include/: clockless_esp32.h  clockless_i2s_esp32.h  clockless_rmt_esp32.h  fastled_esp32.h
main/: main.cpp
